Remove obsolete buildbot profile (no longer in use)