@@ -426,168 +426,6 @@
       </build>
     </profile>
 
-
-    <profile>
-      <id>buildbot</id>
-
-      <dependencies>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>arquillian-tomee-embedded</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>arquillian-tomee-remote</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>arquillian-tomee-webapp-remote</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-
-        <!-- just to get it in the correct order -->
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>apache-tomee</artifactId>
-          <version>${project.version}</version>
-          <classifier>webprofile</classifier>
-          <type>zip</type>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>apache-tomee</artifactId>
-          <version>${project.version}</version>
-          <classifier>plus</classifier>
-          <type>zip</type>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>apache-tomee</artifactId>
-          <version>${project.version}</version>
-          <classifier>plume</classifier>
-          <type>zip</type>
-        </dependency>
-
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>tomee-webapp</artifactId>
-          <version>${project.version}</version>
-          <type>war</type>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>tomee-plus-webapp</artifactId>
-          <version>${project.version}</version>
-          <type>war</type>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>tomee-plume-webapp</artifactId>
-          <version>${project.version}</version>
-          <type>war</type>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.tomcat</groupId>
-          <artifactId>tomcat</artifactId>
-          <version>${tomcat.version}</version>
-          <type>zip</type>
-        </dependency>
-
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${surefire.version}</version>
-            <executions>
-              <execution>
-                <id>test-tomee-embedded</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>${maven.test.skip}</skip>
-                  <argLine>-XX:MaxPermSize=768M</argLine>
-                  <systemPropertyVariables>
-                    <tomee.version>${project.version}</tomee.version>
-                    <arquillian.launch>tomee-embedded</arquillian.launch>
-                    <openejb.arquillian.adapter>tomee-embedded</openejb.arquillian.adapter>
-                  </systemPropertyVariables>
-                </configuration>
-              </execution>
-
-              <!-- Remote against Web Profile, JAX-RS and Plus -->
-
-              <execution>
-                <id>test-tomee-remote-webprofile</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <systemPropertyVariables>
-                    <openejb.arquillian.debug>true</openejb.arquillian.debug>
-                    <tomee.version>${project.version}</tomee.version>
-                    <tomee.classifier>webprofile</tomee.classifier>
-                    <arquillian.launch>tomee-remote</arquillian.launch>
-                    <openejb.arquillian.adapter>tomee-remote</openejb.arquillian.adapter>
-                  </systemPropertyVariables>
-                </configuration>
-              </execution>
-              <execution>
-                <id>test-tomee-remote-plus</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>${maven.test.skip}</skip>
-                  <systemPropertyVariables>
-                    <openejb.arquillian.debug>true</openejb.arquillian.debug>
-                    <tomee.version>${project.version}</tomee.version>
-                    <tomee.classifier>plus</tomee.classifier>
-                    <arquillian.launch>tomee-remote</arquillian.launch>
-                    <openejb.arquillian.adapter>tomee-remote</openejb.arquillian.adapter>
-                  </systemPropertyVariables>
-                </configuration>
-              </execution>
-              <execution>
-                <id>test-tomee-remote-plume</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>${maven.test.skip}</skip>
-                  <systemPropertyVariables>
-                    <openejb.arquillian.debug>true</openejb.arquillian.debug>
-                    <tomee.version>${project.version}</tomee.version>
-                    <tomee.classifier>plume</tomee.classifier>
-                    <arquillian.launch>tomee-remote</arquillian.launch>
-                    <openejb.arquillian.adapter>tomee-remote</openejb.arquillian.adapter>
-                  </systemPropertyVariables>
-                  <excludes>
-                    <exclude>**/AppComposerTest.java</exclude>
-                  </excludes>
-                </configuration>
-              </execution>
-            </executions>
-            <configuration>
-              <skip>true</skip>
-              <parallel>none</parallel>
-              <threadCount>1</threadCount>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-
     <profile>
       <!--
       Added to make it easy to quickly verify if something "should" work
